# marsha-agent

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml
docs/adr/: 001-hermes-sebagai-orchestrator.md  002-fastapi-untuk-quant-bot.md  003-redis-sebagai-shared-memory.md  004-venue-crypto-perpetual-binance-testnet.md  005-autonomy-governance-asimetri-keselamatan.md  006-api-gateway-mcp-tool-tervalidasi.md
docs/explanation/: arsitektur.md  diagrams.md  monitoring-dan-alert.md  multi-agent.md
docs/how-to/: hermes-docker.md  setup-cron-jobs.md  setup-lokal.md  setup-telegram.md  tambah-skill.md
docs/reference/: api-endpoints.md  database-schema.md  env-vars.md  fundamentals-data.md  news-sources.md  redis-keys.md
hermes-skills/: trading-risk-review.md
infra/hermes/: SOUL.md  config.yaml
infra/hermes/scripts/: fundamentals-fetcher.py  fundamentals_mcp.py  news-scout.sh  sentiment-scout.py
infra/hermes/scripts/fundamentals/: __init__.py  core.py
infra/hermes/scripts/news_scout/: __init__.py  dedup.py  fetcher.py  filters.py  formatter.py  main.py  models.py  parser.py  sources.py  summary_enrichment.py
infra/hermes/skills/analyst-fundamentals/: SKILL.md
infra/hermes/skills/analyst-news/: SKILL.md
infra/hermes/skills/analyst-sentiment/: SKILL.md
infra/hermes/skills/analyst-technical/: SKILL.md
infra/postgres/: init.sql
services/api-gateway/: Dockerfile  pyproject.toml
services/api-gateway/gateway/: main.py
services/api-gateway/gateway/routers/: telemetry.py
(+12 files in other folders)
