[project]
name = "api-gateway"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "redis[hiredis]>=7.1.1",
    "asyncpg>=0.31.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
]

[tool.uv]
dev-dependencies = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
